# Pass-The-Blocks

./: CMakeLists.txt  README.md  config.txt
include/: board_generator.h  config_parser.h  file_reader.h  game.h  reader.h
src/: board_generator.cpp  config_parser.cpp  file_reader.cpp  game.cpp  main.cpp
